--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pytz==2024.1
 six==1.16.0
 SQLAlchemy==2.0.31
